--- a/fp2019/projects.html
+++ b/fp2019/projects.html
@@ -132,18 +132,70 @@ Lambda байткод) по аналогии с проектом js_of_ocaml.
 <div class="sect2">
 <h3 id="merlin">merlin</h3>
 <div class="paragraph">
-<p>IDE для функциональных языков не очень хорошо развиты по нескольким причинами:
-* за счет другого подхода к программированию потребность в IDE не так сильно ощущается: так как меньше синтаксического мусора, то меньше нужды в автоматических рефакторингах, и прочее.
-* так как потредность в IDE не так ощущается, то мало кто уходит дальше минимальных требований к IDE, которыми явщяются: go-to-definition, показать тип под курсором, подсветка ошибок и прочие мелочи.</p>
+<p>IDE для функциональных языков не очень хорошо развиты по нескольким причинами:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>за счет другого подхода к программированию потребность в IDE не так сильно ощущается: так как меньше синтаксического мусора, то меньше нужды в автоматических рефакторингах, и прочее.</p>
+</li>
+<li>
+<p>так как потредность в IDE не так ощущается, то мало кто уходит дальше минимальных требований к IDE, которыми явщяются: go-to-definition, показать тип под курсором, подсветка ошибок и прочие мелочи.</p>
+</li>
+</ul>
 </div>
 <div class="paragraph">
 <p>Следствие: в области разработки IDE для функциональных языков можно много чего сделать.</p>
 </div>
 <div class="paragraph">
-<p>Сейчас стандартом IDE для языка OCaml является merlin, который умеет минимальный набор фич</p>
+<p>Сейчас стандартом IDE для языка OCaml является <a href="https://github.com/ocaml/merlin">merlin</a>, который сейчас умеет минимальный набор фич.</p>
 </div>
 <div class="paragraph">
-<p>Хочется его постепенно допилить: различные умные рефакторинги (в частности whole project renaming) и т.д.</p>
+<p>Хочется его постепенно допилить:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>signature help</p>
+<div class="ulist">
+<ul>
+<li>
+<p>по локации понять из typedtree, что курсор стоит на применении функции</p>
+</li>
+<li>
+<p>понять на каком мы аргументе</p>
+</li>
+<li>
+<p>показать сигнатуру функции + доку (если есть)</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Выдавать предложения переименовать идентификаторы ради исправления ошибок (например, если человек
+написал <code>Lsit</code> вместо <code>List</code>)</p>
+</li>
+<li>
+<p>различные умные рефакторинги, в частности whole project renaming. Сейчас это кое-как умеет делать
+<a href="https://gitlab.com/trustworthy-refactoring/refactorer">RoToR</a>, но он не умеет делать больше ничего. Хочется повторить удачную реализацию <code>RoToR</code> в <code>merlin</code>.</p>
+</li>
+<li>
+<p>и т.д.</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>В идеале, работа должна заключаться</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>и в допиливании backend на OCaml, который занимается анализами и  содержательной частью вообще</p>
+</li>
+<li>
+<p>и в допливании frontend (например, VsCode), который позволяется редактировать код и вызывать рефакторинги непосредственно</p>
+</li>
+</ul>
 </div>
 </div>
 <div class="sect2">
@@ -200,7 +252,7 @@ Lambda байткод) по аналогии с проектом js_of_ocaml.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-16 15:35:31 MSK
+Last updated 2019-09-17 15:01:09 MSK
 </div>
 </div>
 </body>
