FP2019: lecture 03 info

--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -197,7 +197,9 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <div class="sect1">
 <h2 id="week3">Неделя 3 (19 сентября)</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p>Слайдов нет, будем разбирать <a href="https://gitlab.com/Kakadu/haskell-course-demos/tree/master/Expr">код</a>, который вычисляет арифиметические выражения.</p>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -277,7 +279,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-12 14:49:22 MSK
+Last updated 2019-09-17 15:17:39 MSK
 </div>
 </div>
 </body>
