FP2019: notes for scala hackers

--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -144,13 +144,50 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <div class="ulist">
 <ul>
 <li>
+<p>Сдать какой-нибудь онлайн-курс</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Для Haskell</p>
+<div class="ulist">
+<ul>
+<li>
 <p>Cдать <a href="https://stepik.org/join-class/3a7513c770b80866b96e18baa03c3ce18e87303e">1ю часть курса</a> про ФП на степике</p>
 </li>
 <li>
 <p>Cдать <a href="https://stepik.org/join-class/a4741bd985027507643baf2b07221c264329b484">2ю часть курса</a> про ФП на степике</p>
 </li>
+</ul>
+</div>
+</li>
 <li>
-<p>TODO: разобраться что там с курсами по Scala.</p>
+<p>Scala</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Курс на <a href="https://stepik.org/course/16243/syllabus">Степике</a></p>
+</li>
+<li>
+<p>Накодить задачу на Scala (в более-менее функциональном стиле, за Scala как Java будут карать!)</p>
+<div class="ulist">
+<ul>
+<li>
+<p>1</p>
+</li>
+<li>
+<p>2</p>
+</li>
+<li>
+<p>3</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
 </li>
 <li>
 <p>Колобок про теоркат (но это пока не точно).</p>
@@ -200,6 +237,12 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <div class="paragraph">
 <p>Слайдов нет, будем разбирать <a href="https://gitlab.com/Kakadu/haskell-course-demos/tree/master/Expr">код</a>, который вычисляет арифиметические выражения.</p>
 </div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week4">Неделя 4 (26 сентября)</h2>
+<div class="sectionbody">
+
 </div>
 </div>
 <div class="sect1">
@@ -279,7 +322,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-17 15:17:39 MSK
+Last updated 2019-09-18 15:48:40 MSK
 </div>
 </div>
 </body>
