--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -168,17 +168,17 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p>Курс на <a href="https://stepik.org/course/16243/syllabus">Степике</a></p>
 </li>
 <li>
-<p>Накодить задачу на Scala (в более-менее функциональном стиле, за Scala как Java будут карать!)</p>
+<p>Накодить задачу на Scala 3 (sic!) (в более-менее функциональном стиле, за Scala как Java буду карать!)</p>
 <div class="ulist">
 <ul>
 <li>
-<p>1</p>
+<p>Окологеймерская: симуляция мира, в котором кто-то живет и что-то хочет.</p>
 </li>
 <li>
-<p>2</p>
+<p>Алогритм DPLL (из мира мат.логики) более-менее оптимизированный (hash-consing&#8217;ом, например).</p>
 </li>
 <li>
-<p>3</p>
+<p>Дана программа в AST мини-языка (присваивания, циклы, ветвления, числовые переменные). Программа аннотирована триплетами Хоара. Надо проверить, хорошо ли она (корректно ли) аннотирована. Если некорректно, то сказать где некорректно.</p>
 </li>
 </ul>
 </div>
@@ -322,7 +322,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-18 15:48:40 MSK
+Last updated 2019-09-19 00:51:08 MSK
 </div>
 </div>
 </body>
