--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -28,12 +28,11 @@
 <li><a href="#_задача_про_верификацию_и_триплеты_хоара">Задача про верификацию и триплеты Хоара</a></li>
 </ul>
 </li>
-<li><a href="#_остальное">Остальное</a>
+<li><a href="#general_tasks">Остальное</a>
 <ul class="sectlevel2">
-<li><a href="#two">0 фывафывафывафы</a></li>
-<li><a href="#three">1 NOTE: написать подробнее</a></li>
-<li><a href="#_2">2</a></li>
-<li><a href="#_3">3</a></li>
+<li><a href="#One">Python</a></li>
+<li><a href="#_ruby">Ruby</a></li>
+<li><a href="#_kotlin">Kotlin</a></li>
 </ul>
 </li>
 </ul>
@@ -85,41 +84,55 @@
 </div>
 </div>
 <div class="sect1">
-<h2 id="_остальное">Остальное</h2>
+<h2 id="general_tasks">Остальное</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Дальше идет N тем, которые будут определять задачи вида</p>
 </div>
-<div class="ulist">
-<ul>
+<div class="olist arabic">
+<ol class="arabic">
 <li>
 <p>Напишите тип данных для представления программ на мини-языке.</p>
 </li>
 <li>
-<p>Сделайте парсер этого языка (как именно делать   будет сказано в курсе Москвина и немного на лекции)</p>
+<p>Сделайте парсер этого языка (как именно делать  будет сказано в курсе Москвина и немного на лекции)</p>
 </li>
 <li>
 <p>Сделайте интерпретатор языка (по аналогии с тем как мы писали <code>eval</code> для арифметических выражений на паре №2)</p>
 </li>
 <li>
-<p>Реализуйте какое-нибудь преобразование программ.</p>
+<p>Реализуйте какое-нибудь преобразование программ (детали будут специфичны для задачи).</p>
+</li>
+</ol>
+</div>
+<div class="paragraph">
+<p>Заметим, что задачи 2,3,4 зависят от №1, но не друг от друга. В процессе выполнения 2,3 и 4 может оказаться, что нужно поменять представление программ. Это нормально, т.е. то, что вы напишите в решение пункта 1 скорее всего не будет окончательным.</p>
+</div>
+<div class="paragraph">
+<p>Далее ниже идут описания языков, у них неявно стоит</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>приписка "мини"</p>
+</li>
+<li>
+<p>приписка "написать подробнее".</p>
 </li>
 </ul>
 </div>
 <div class="sect2">
-<h3 id="two">0 фывафывафывафы</h3>
+<h3 id="One">Python</h3>
+<div class="paragraph">
+<p>Функции, переменные, присваивания, циклы, ветвления&#8201;&#8212;&#8201;стандартный набор большого количества языков.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_ruby">Ruby</h3>
 
 </div>
 <div class="sect2">
-<h3 id="three">1 NOTE: написать подробнее</h3>
-
-</div>
-<div class="sect2">
-<h3 id="_2">2</h3>
-
-</div>
-<div class="sect2">
-<h3 id="_3">3</h3>
+<h3 id="_kotlin">Kotlin</h3>
 
 </div>
 </div>
@@ -127,7 +140,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-20 19:10:22 MSK
+Last updated 2019-09-23 16:13:12 MSK
 </div>
 </div>
 </body>
