--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -28,13 +28,34 @@
 <li><a href="#_задача_про_верификацию_и_триплеты_хоара">Задача про верификацию и триплеты Хоара</a></li>
 </ul>
 </li>
-<li><a href="#general_tasks">Остальное</a>
+<li><a href="#hw1234">Домашки 1-4</a>
 <ul class="sectlevel2">
 <li><a href="#One">Python</a></li>
-<li><a href="#_ruby">Ruby</a></li>
+<li><a href="#two">Ruby</a></li>
+<li><a href="#_javascript">Javascript</a></li>
 <li><a href="#_kotlin">Kotlin</a></li>
+<li><a href="#_sql">SQL</a></li>
+<li><a href="#_haskell">Haskell</a></li>
+<li><a href="#_lisp">LISP</a></li>
+<li><a href="#_scala">Scala</a></li>
+<li><a href="#_ocaml_with_objects">OCaml with objects</a></li>
+<li><a href="#_ocaml_haskell_with_gadt">OCaml/Haskell with GADT</a></li>
+<li><a href="#_lua">Lua</a></li>
+<li><a href="#_bourne_again_shell">Bourne Again Shell</a></li>
+<li><a href="#_awk">AWK</a></li>
+<li><a href="#_ideal_parallel_algol">Ideal Parallel Algol</a></li>
+<li><a href="#_cи">Cи</a></li>
+<li><a href="#_assembler">Assembler</a></li>
+<li><a href="#_datalog">Datalog</a></li>
+<li><a href="#_nfa">NFA</a></li>
+<li><a href="#_рефал">РеФаЛ</a></li>
+<li><a href="#_forth">Forth</a></li>
+<li><a href="#__a_href_https_en_wikipedia_org_wiki_promela_promela_a"><a href="https://en.wikipedia.org/wiki/Promela">Promela</a></a></li>
+<li><a href="#_yacc">Yacc</a></li>
 </ul>
 </li>
+<li><a href="#hw5">Домашки №5</a></li>
+<li><a href="#hw6">Домашки №6</a></li>
 </ul>
 </div>
 </div>
@@ -43,7 +64,7 @@
 <h2 id="_задачки_для_скалолазов">Задачки для Скалолазов</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Дополнительные, так как у них слишком короткий курс на Степике.</p>
+<p>Дополнительные, так как у них слишком короткий курс на Степике. Если надо будет ещё задачек&#8201;&#8212;&#8201;напишите.</p>
 </div>
 <div class="sect2">
 <h3 id="_алгоритм_dpll">Алгоритм DPLL</h3>
@@ -84,7 +105,7 @@
 </div>
 </div>
 <div class="sect1">
-<h2 id="general_tasks">Остальное</h2>
+<h2 id="hw1234">Домашки 1-4</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Дальше идет N тем, которые будут определять задачи вида</p>
@@ -95,7 +116,7 @@
 <p>Напишите тип данных для представления программ на мини-языке.</p>
 </li>
 <li>
-<p>Сделайте парсер этого языка (как именно делать  будет сказано в курсе Москвина и немного на лекции)</p>
+<p>Сделайте парсер этого языка (как именно делать  будет сказано на лекции и немного в курсе Москвина)</p>
 </li>
 <li>
 <p>Сделайте интерпретатор языка (по аналогии с тем как мы писали <code>eval</code> для арифметических выражений на паре №2)</p>
@@ -121,26 +142,182 @@
 </li>
 </ul>
 </div>
+<div class="paragraph">
+<p>А также, если кто-то захочет решать одну и ту же задачу, но на разных языках (по-видимому, это будет Scala и
+Haskell), то это нужно предварительно согласовать.</p>
+</div>
+<div class="paragraph">
+<p>Если кто-то хочет подусложнить задачу и решать одну и ту же на одном и том же языке <em>вдвоем</em>, то можно также обсудить.</p>
+</div>
 <div class="sect2">
 <h3 id="One">Python</h3>
 <div class="paragraph">
-<p>Функции, переменные, присваивания, циклы, ветвления&#8201;&#8212;&#8201;стандартный набор большого количества языков.</p>
+<p>Функции, переменные, присваивания, циклы, ветвления, анонимные функции&#8201;&#8212;&#8201;стандартный набор большого количества языков. Потом какие-то языково-специфичные фичи.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_ruby">Ruby</h3>
-
+<h3 id="two">Ruby</h3>
+<div class="paragraph">
+<p>Примерно как в Питоне.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_javascript">Javascript</h3>
+<div class="paragraph">
+<p>Стандартный набор языковых конструкций, прототипное наследование. Реализовать все фичи из
+известного <a href="https://www.destroyallsoftware.com/talks/wat">видеообзора</a> Javascript</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_kotlin">Kotlin</h3>
+<div class="paragraph">
+<p>Тут из языково-специфичных фич обязательно будет какая-то поддержка ООП и вызова методов.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_sql">SQL</h3>
+<div class="paragraph">
+<p>Язык запросов к реляционным базам данных. Различные конструкции можно погуглить. Задачей номер 4 будет скорее
+всего какая-то оптимизация запросов.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_haskell">Haskell</h3>
+<div class="paragraph">
+<p>Числа, списки, функции, ленивая стратегия вычислений. Без пользовательских типов данных. В качесве пункта 4&#8201;&#8212;&#8201;хитрые оптимизации</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_lisp">LISP</h3>
+<div class="paragraph">
+<p>LISP известен своими встроенными макросами. Посмотрите примерный синтаксис Scheme (или Common Lisp, и т.д.)
+и напишите интерпретатор, который по дороге дает объявлять и использовать макросы. Вдруг у вас получатся
+гигиенические?</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_scala">Scala</h3>
+<div class="paragraph">
+<p>Функции, числа и прочий стандартный набор фич. Специфичная для Scala часть языка&#8201;&#8212;&#8201;traits.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_ocaml_with_objects">OCaml with objects</h3>
+<div class="paragraph">
+<p>Рекурсивные функции, числа, списки, присваивание и&#8230;&#8203; объекты. Наверное, единственный язык, где ООП
+сделано нормально (за счет структурной типизации и так называемого row полиморфизма).</p>
+</div>
+<div class="paragraph">
+<p>Думаю, что тут проще всего будет меня уговорить назначить на двоих.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_ocaml_haskell_with_gadt">OCaml/Haskell with GADT</h3>
+<div class="paragraph">
+<p>Обобщенные алгебраические типы данных, паттерн-матчинг, проверка типов в контексте GADT.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_lua">Lua</h3>
+<div class="paragraph">
+<p>Интересный минималистичный язык, где в качестве универсальной структуры данных используется помесь
+массива с хэш-таблицей, а для оптимизации вместо целых чисел используеются Double&#8217;ы.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_bourne_again_shell">Bourne Again Shell</h3>
 
+</div>
+<div class="sect2">
+<h3 id="_awk">AWK</h3>
+
+</div>
+<div class="sect2">
+<h3 id="_ideal_parallel_algol">Ideal Parallel Algol</h3>
+<div class="paragraph">
+<p>Стандартный модельный язык для использования в научных ситуациях. Числа, присваивания, циклы, ветвления,
+функции, а также операция запуска N кусков кода параллельно.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_cи">Cи</h3>
+
+</div>
+<div class="sect2">
+<h3 id="_assembler">Assembler</h3>
+<div class="paragraph">
+<p>Выберите вид ассемблера, который хорошо работает на вашем компьютере/процессоре и почитайте
+виды регистров в данной архитектуре. Реализуйте интерпретатор. Преобразование программ из
+задания 4 скорее всего будет про автоматическую векторизацию. Если по дороге окажется, что
+Вы научились генерировать настоящий ELF файл, который потом можно отдельно исполнить&#8201;&#8212;&#8201;вообще будет круто.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_datalog">Datalog</h3>
+<div class="paragraph">
+<p>Простейший представитель логического программирования. Спека должна быть легко находима
+в интернетах</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_nfa">NFA</h3>
+<div class="paragraph">
+<p>Язык задания недетерминированных конченых автоматов, реализовать вычислитель таких автоматов.
+В качестве №4 будет конвертация в детерминирванный или что-то подобное.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_рефал">РеФаЛ</h3>
+<div class="paragraph">
+<p>Отечественный язык программирования. Вдохновения черпать
+<a href="https://github.com/bmstu-iu9/refal-5-lambda">отсюда</a>.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_forth">Forth</h3>
+<div class="paragraph">
+<p>Так называемый стековый язык программирования, мало похож на всё остальное. Считается
+языком с легко расширяемым синтаксисом.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="__a_href_https_en_wikipedia_org_wiki_promela_promela_a"><a href="https://en.wikipedia.org/wiki/Promela">Promela</a></h3>
+<div class="paragraph">
+<p>Входной язык для утилиты верификации.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_yacc">Yacc</h3>
+<div class="paragraph">
+<p>Язык описания синтаксических анализаторов (парсеров). Скорее всего его придется сильно упростить
+(без action code&#8217;а, описания ассоциативности и приоритетов операций).
+К нему обычно прилагается утилита, которая по описанию генерирует парсер. Сделайте что-то подобное,
+генерируя по описанию парсера код на Haskell/Scala, который выполняет синтаксический анализ.
+Расширениями генерации можно выбрать, например, устранение левой рекурсии.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="hw5">Домашки №5</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Скорее всего про структуры данных</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="hw6">Домашки №6</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Скорее всего про динамическое программирование</p>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-23 16:13:12 MSK
+Last updated 2019-09-24 01:33:06 MSK
 </div>
 </div>
 </body>
