--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -30,8 +30,8 @@
 </li>
 <li><a href="#hw1234">Домашки 1-4</a>
 <ul class="sectlevel2">
-<li><a href="#One">Python</a></li>
-<li><a href="#two">Ruby</a></li>
+<li><a href="#_python">Python</a></li>
+<li><a href="#_ruby">Ruby</a></li>
 <li><a href="#_javascript">Javascript</a></li>
 <li><a href="#_kotlin">Kotlin</a></li>
 <li><a href="#_sql">SQL</a></li>
@@ -41,17 +41,17 @@
 <li><a href="#_ocaml_with_objects">OCaml with objects</a></li>
 <li><a href="#_ocaml_haskell_with_gadt">OCaml/Haskell with GADT</a></li>
 <li><a href="#_lua">Lua</a></li>
-<li><a href="#_bourne_again_shell">Bourne Again Shell</a></li>
+<li><a href="#_bourne_again_shell">Bourne Again SHell</a></li>
 <li><a href="#_awk">AWK</a></li>
 <li><a href="#_ideal_parallel_algol">Ideal Parallel Algol</a></li>
 <li><a href="#_cи">Cи</a></li>
 <li><a href="#_assembler">Assembler</a></li>
 <li><a href="#_datalog">Datalog</a></li>
 <li><a href="#_nfa">NFA</a></li>
-<li><a href="#_рефал">РеФаЛ</a></li>
+<li><a href="#refal">РеФаЛ</a></li>
 <li><a href="#_forth">Forth</a></li>
-<li><a href="#__a_href_https_en_wikipedia_org_wiki_promela_promela_a"><a href="https://en.wikipedia.org/wiki/Promela">Promela</a></a></li>
-<li><a href="#_yacc">Yacc</a></li>
+<li><a href="#_promela">Promela</a></li>
+<li><a href="#_yacc">YACC</a></li>
 </ul>
 </li>
 <li><a href="#hw5">Домашки №5</a></li>
@@ -100,6 +100,9 @@
 </div>
 <div class="paragraph">
 <p>Про триплеты Хоара по-русски можно читать, например, в книжке Герасимова "Математическая логика".</p>
+</div>
+<div class="paragraph">
+<p>Выбравшему эту задачу можно упростить себе жизнь, выбрав правильный вариант домашки.</p>
 </div>
 </div>
 </div>
@@ -150,13 +153,13 @@ Haskell), то это нужно предварительно согласова
 <p>Если кто-то хочет подусложнить задачу и решать одну и ту же на одном и том же языке <em>вдвоем</em>, то можно также обсудить.</p>
 </div>
 <div class="sect2">
-<h3 id="One">Python</h3>
+<h3 id="_python">Python</h3>
 <div class="paragraph">
 <p>Функции, переменные, присваивания, циклы, ветвления, анонимные функции&#8201;&#8212;&#8201;стандартный набор большого количества языков. Потом какие-то языково-специфичные фичи.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="two">Ruby</h3>
+<h3 id="_ruby">Ruby</h3>
 <div class="paragraph">
 <p>Примерно как в Питоне.</p>
 </div>
@@ -171,7 +174,7 @@ Haskell), то это нужно предварительно согласова
 <div class="sect2">
 <h3 id="_kotlin">Kotlin</h3>
 <div class="paragraph">
-<p>Тут из языково-специфичных фич обязательно будет какая-то поддержка ООП и вызова методов.</p>
+<p>Тут из языково-специфичных фич обязательно должна быть какая-то поддержка ООП и вызова методов.</p>
 </div>
 </div>
 <div class="sect2">
@@ -214,7 +217,11 @@ Haskell), то это нужно предварительно согласова
 <div class="sect2">
 <h3 id="_ocaml_haskell_with_gadt">OCaml/Haskell with GADT</h3>
 <div class="paragraph">
-<p>Обобщенные алгебраические типы данных, паттерн-матчинг, проверка типов в контексте GADT.</p>
+<p>Обобщенные алгебраические типы данных, паттерн-матчинг, проверка типов для паттерн-мэтчинга
+с использованием GADT.</p>
+</div>
+<div class="paragraph">
+<p>Наверное, тут тоже можно парочку.</p>
 </div>
 </div>
 <div class="sect2">
@@ -225,12 +232,16 @@ Haskell), то это нужно предварительно согласова
 </div>
 </div>
 <div class="sect2">
-<h3 id="_bourne_again_shell">Bourne Again Shell</h3>
-
+<h3 id="_bourne_again_shell">Bourne Again SHell</h3>
+<div class="paragraph">
+<p>Все, кто трогал линукс, видели эту штуку.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_awk">AWK</h3>
-
+<div class="paragraph">
+<p>Предшественник языка Perl</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_ideal_parallel_algol">Ideal Parallel Algol</h3>
@@ -241,7 +252,9 @@ Haskell), то это нужно предварительно согласова
 </div>
 <div class="sect2">
 <h3 id="_cи">Cи</h3>
-
+<div class="paragraph">
+<p>Интерпретатор языка с поддержкой арфиметики указателей.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_assembler">Assembler</h3>
@@ -267,7 +280,7 @@ Haskell), то это нужно предварительно согласова
 </div>
 </div>
 <div class="sect2">
-<h3 id="_рефал">РеФаЛ</h3>
+<h3 id="refal">РеФаЛ</h3>
 <div class="paragraph">
 <p>Отечественный язык программирования. Вдохновения черпать
 <a href="https://github.com/bmstu-iu9/refal-5-lambda">отсюда</a>.</p>
@@ -281,13 +294,13 @@ Haskell), то это нужно предварительно согласова
 </div>
 </div>
 <div class="sect2">
-<h3 id="__a_href_https_en_wikipedia_org_wiki_promela_promela_a"><a href="https://en.wikipedia.org/wiki/Promela">Promela</a></h3>
+<h3 id="_promela">Promela</h3>
 <div class="paragraph">
-<p>Входной язык для утилиты верификации.</p>
+<p>Входной язык для утилиты верификации <a href="https://en.wikipedia.org/wiki/Promela">Promela</a>.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_yacc">Yacc</h3>
+<h3 id="_yacc">YACC</h3>
 <div class="paragraph">
 <p>Язык описания синтаксических анализаторов (парсеров). Скорее всего его придется сильно упростить
 (без action code&#8217;а, описания ассоциативности и приоритетов операций).
@@ -317,7 +330,7 @@ Haskell), то это нужно предварительно согласова
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-24 01:33:06 MSK
+Last updated 2019-09-24 13:19:58 MSK
 </div>
 </div>
 </body>
