--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -155,7 +155,8 @@ Haskell), то это нужно предварительно согласова
 <div class="sect2">
 <h3 id="_python">Python</h3>
 <div class="paragraph">
-<p>Функции, переменные, присваивания, циклы, ветвления, анонимные функции&#8201;&#8212;&#8201;стандартный набор большого количества языков. Потом какие-то языково-специфичные фичи.</p>
+<p>Функции, переменные, присваивания, циклы, ветвления, анонимные функции&#8201;&#8212;&#8201;стандартный набор большого количества языков. Потом какие-то языково-специфичные фичи.
+Смотрите также на <a href="https://chocopy.org/">ChocoPy</a>.</p>
 </div>
 </div>
 <div class="sect2">
@@ -330,7 +331,7 @@ Haskell), то это нужно предварительно согласова
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-24 13:19:58 MSK
+Last updated 2019-09-25 00:11:28 MSK
 </div>
 </div>
 </body>
