--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -35,15 +35,15 @@
 <li><a href="#_javascript">Javascript</a></li>
 <li><a href="#_kotlin">Kotlin</a></li>
 <li><a href="#_sql">SQL</a></li>
-<li><a href="#_haskell">Haskell</a></li>
+<li><a href="#_haskell_1_2_человека">Haskell (1-2 человека)</a></li>
 <li><a href="#_lisp">LISP</a></li>
-<li><a href="#_scala">Scala</a></li>
-<li><a href="#_ocaml_with_objects">OCaml with objects</a></li>
-<li><a href="#_ocaml_haskell_with_gadt">OCaml/Haskell with GADT</a></li>
-<li><a href="#_lua">Lua</a></li>
+<li><a href="#_scala_1_2_человека">Scala (1-2 человека)</a></li>
+<li><a href="#_ocaml_with_objects_2_человека">OCaml with objects (2 человека)</a></li>
+<li><a href="#_ocaml_haskell_with_gadt_2_человека">OCaml/Haskell with GADT (2 человека)</a></li>
+<li><a href="#_lua_цириков">Lua (Цириков?)</a></li>
 <li><a href="#_bourne_again_shell">Bourne Again SHell</a></li>
 <li><a href="#_awk">AWK</a></li>
-<li><a href="#_ideal_parallel_algol">Ideal Parallel Algol</a></li>
+<li><a href="#_ideal_parallel_algol_1_человек">Ideal Parallel Algol (1 человек)</a></li>
 <li><a href="#_cи">Cи</a></li>
 <li><a href="#_assembler">Assembler</a></li>
 <li><a href="#_datalog">Datalog</a></li>
@@ -60,6 +60,13 @@
 </div>
 </div>
 <div id="content">
+<div id="preamble">
+<div class="sectionbody">
+<div class="paragraph">
+<p>Переход на <a href="index.html">главную страницу курса</a></p>
+</div>
+</div>
+</div>
 <div class="sect1">
 <h2 id="_задачки_для_скалолазов">Задачки для Скалолазов</h2>
 <div class="sectionbody">
@@ -69,7 +76,7 @@
 <div class="sect2">
 <h3 id="_алгоритм_dpll">Алгоритм DPLL</h3>
 <div class="paragraph">
-<p>Задача из мира математической логики про выполнимость формулы языка высказываний. В том году давал на экзамен. Сейчас хочу сам алгоритм  с какими-нибудь оптимизациями (например, hash consing).</p>
+<p>Задача из мира математической логики про выполнимость формулы языка высказываний. В том году давал на экзамен. Сейчас хочу сам алгоритм с какими-нибудь оптимизациями (например, hash consing).</p>
 </div>
 <div class="paragraph">
 <p>Сам алгоритм должен довольно легко гуглиться.</p>
@@ -152,6 +159,9 @@ Haskell), то это нужно предварительно согласова
 <div class="paragraph">
 <p>Если кто-то хочет подусложнить задачу и решать одну и ту же на одном и том же языке <em>вдвоем</em>, то можно также обсудить.</p>
 </div>
+<div class="paragraph">
+<p>Проверяться будет как программа работает, а также будут вопросы по коду программы (потому что все задачи гуглятся).</p>
+</div>
 <div class="sect2">
 <h3 id="_python">Python</h3>
 <div class="paragraph">
@@ -181,14 +191,19 @@ Haskell), то это нужно предварительно согласова
 <div class="sect2">
 <h3 id="_sql">SQL</h3>
 <div class="paragraph">
-<p>Язык запросов к реляционным базам данных. Различные конструкции можно погуглить. Задачей номер 4 будет скорее
+<p>Язык запросов к реляционным базам данных, давал в том году на экзамене. Различные конструкции можно погуглить. Задачей номер 4 будет скорее
 всего какая-то оптимизация запросов.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_haskell">Haskell</h3>
+<h3 id="_haskell_1_2_человека">Haskell (1-2 человека)</h3>
 <div class="paragraph">
-<p>Числа, списки, функции, ленивая стратегия вычислений. Без пользовательских типов данных. В качесве пункта 4&#8201;&#8212;&#8201;хитрые оптимизации</p>
+<p>Числа, списки, функции, ленивая стратегия вычислений. Без пользовательских типов данных. В качестве пункта 4&#8201;&#8212;&#8201;хитрые оптимизации. Алгоритм вывода типов пока не включаю, но написать
+<a href="http://okmij.org/ftp/ML/generalization.html"><em>эффективный</em></a> (почти линейный) алгоритм вывода типов может быть
+<span class="line-through">сложной</span> интересной задачей.</p>
+</div>
+<div class="paragraph">
+<p>Тут легко можно договориться на 2 человека.</p>
 </div>
 </div>
 <div class="sect2">
@@ -200,25 +215,29 @@ Haskell), то это нужно предварительно согласова
 </div>
 </div>
 <div class="sect2">
-<h3 id="_scala">Scala</h3>
+<h3 id="_scala_1_2_человека">Scala (1-2 человека)</h3>
 <div class="paragraph">
-<p>Функции, числа и прочий стандартный набор фич. Специфичная для Scala часть языка&#8201;&#8212;&#8201;traits.</p>
+<p>Функции, числа и прочий стандартный набор фич. Специфичная для Scala часть языка&#8201;&#8212;&#8201;traits. Вообще, чтобы сделать это правильно там нужно прикручивать движок перебора с возвратами a la Datalog.</p>
+</div>
+<div class="paragraph">
+<p>Наверное, можно притянуть на 2х человек, если алгоритм под капотом будет годный.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_ocaml_with_objects">OCaml with objects</h3>
+<h3 id="_ocaml_with_objects_2_человека">OCaml with objects (2 человека)</h3>
 <div class="paragraph">
-<p>Рекурсивные функции, числа, списки, присваивание и&#8230;&#8203; объекты. Наверное, единственный язык, где ООП
-сделано нормально (за счет структурной типизации и так называемого row полиморфизма).</p>
+<p>Числа, списки, присваивание, объекты и их рекурсивные методы вместо рекурсивных функций.
+Наверное, единственный язык, где ООП сделано нормально (за счет структурной типизации и
+так называемого row-полиморфизма).</p>
 </div>
 <div class="paragraph">
 <p>Думаю, что тут проще всего будет меня уговорить назначить на двоих.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_ocaml_haskell_with_gadt">OCaml/Haskell with GADT</h3>
+<h3 id="_ocaml_haskell_with_gadt_2_человека">OCaml/Haskell with GADT (2 человека)</h3>
 <div class="paragraph">
-<p>Обобщенные алгебраические типы данных, паттерн-матчинг, проверка типов для паттерн-мэтчинга
+<p>Числа, функции и обобщенные алгебраические типы данных, паттерн-матчинг, проверка типов для паттерн-мэтчинга
 с использованием GADT.</p>
 </div>
 <div class="paragraph">
@@ -226,7 +245,7 @@ Haskell), то это нужно предварительно согласова
 </div>
 </div>
 <div class="sect2">
-<h3 id="_lua">Lua</h3>
+<h3 id="_lua_цириков">Lua (Цириков?)</h3>
 <div class="paragraph">
 <p>Интересный минималистичный язык, где в качестве универсальной структуры данных используется помесь
 массива с хэш-таблицей, а для оптимизации вместо целых чисел используеются Double&#8217;ы.</p>
@@ -245,16 +264,50 @@ Haskell), то это нужно предварительно согласова
 </div>
 </div>
 <div class="sect2">
-<h3 id="_ideal_parallel_algol">Ideal Parallel Algol</h3>
+<h3 id="_ideal_parallel_algol_1_человек">Ideal Parallel Algol (1 человек)</h3>
 <div class="paragraph">
-<p>Стандартный модельный язык для использования в научных ситуациях. Числа, присваивания, циклы, ветвления,
-функции, а также операция запуска N кусков кода параллельно.</p>
+<p>Стандартный модельный язык для использования в научных ситуациях. Числа, ветвления, присваивания, барьеры
+для чтения и записи, а также операция запуска N кусков кода параллельно.
+Функции и циклы не добавляю, а хочу, чтобы были реализованы
+несколько <em>моделей памяти</em> для данной программы.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>sequentional consistency (SC). Исполнение программы произвольно перемежается между параллельными
+участками и выполняет по одной инструкции. Самая интуитивная реализация, ни один процессор такой не соответствует.</p>
+</li>
+<li>
+<p>TSO&#8201;&#8212;&#8201;модель процессоров x86. В ней возможны интересные поведения.
+Если изначально <code>x = EAX = y = EBX = 0</code>, то после выполнения этих двух участков параллельного кода,
+  x86 может остановиться в состоянии <code>EAX == 0 &amp;&amp; EBX == 0</code></p>
+</li>
+</ul>
+</div>
+<div class="literalblock">
+<div class="content">
+<pre>#  Proc 1                           Proc 2
+MOV  [x] ← 1         |         MOV  [y] ← 1
+MOV  EAX ← [y]       |         MOV  EBX ← [x]</pre>
+</div>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>может быть ещё какая-то модель памяти.</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Вот <a href="https://people.mpi-sws.org/~viktor/wmc/operational.pdf">это</a> будет хорошей ссылкой, если уметь разбираться
+в исчислениях (я планирую про это как-то рассказывать).</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_cи">Cи</h3>
 <div class="paragraph">
-<p>Интерпретатор языка с поддержкой арфиметики указателей.</p>
+<p>Интерпретатор языка с поддержкой арфиметики указателей. Наверное будет несложно сделать, есть куча проектов в
+интернетике про реализацию минималистичного компилятора Си в несколько сотен строчек.</p>
 </div>
 </div>
 <div class="sect2">
@@ -276,7 +329,9 @@ Haskell), то это нужно предварительно согласова
 <div class="sect2">
 <h3 id="_nfa">NFA</h3>
 <div class="paragraph">
-<p>Язык задания недетерминированных конченых автоматов, реализовать вычислитель таких автоматов.
+<p>Язык задания недетерминированных конченых автоматов, реализовать вычислитель таких автоматов,
+а такжен загрузку из файла (наверняка уже придумали какой-то стандартный формат для представления автоматов,
+может быть graphviz?)
 В качестве №4 будет конвертация в детерминирванный или что-то подобное.</p>
 </div>
 </div>
@@ -331,7 +386,7 @@ Haskell), то это нужно предварительно согласова
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-25 00:11:28 MSK
+Last updated 2019-09-25 21:15:02 MSK
 </div>
 </div>
 </body>
