--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -168,20 +168,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p>Курс на <a href="https://stepik.org/course/16243/syllabus">Степике</a></p>
 </li>
 <li>
-<p>Накодить задачу на Scala 3 (sic!) (в более-менее функциональном стиле, за Scala как Java буду карать!)</p>
-<div class="ulist">
-<ul>
-<li>
-<p>Окологеймерская: симуляция мира, в котором кто-то живет и что-то хочет.</p>
-</li>
-<li>
-<p>Алогритм DPLL (из мира мат.логики) более-менее оптимизированный (hash-consing&#8217;ом, например).</p>
-</li>
-<li>
-<p>Дана программа в AST мини-языка (присваивания, циклы, ветвления, числовые переменные). Программа аннотирована триплетами Хоара. Надо проверить, хорошо ли она (корректно ли) аннотирована. Если некорректно, то сказать где некорректно.</p>
-</li>
-</ul>
-</div>
+<p>Накодить задачу на Scala 3 (sic!) (в более-менее функциональном стиле, за Scala как Java буду карать!). Три примера задач есть по <a href="hw.html">ссылке</a>.</p>
 </li>
 </ul>
 </div>
@@ -193,7 +180,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p>Колобок про теоркат (но это пока не точно).</p>
 </li>
 <li>
-<p>Домашки в количестве примерно 5 штук</p>
+<p><a href="hw.html">Домашки</a> в количестве примерно 5 штук</p>
 <div class="ulist">
 <ul>
 <li>
@@ -241,6 +228,15 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div class="sect1">
 <h2 id="week4">Неделя 4 (26 сентября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Слайдов нет, будем как писать парсер-комбинаторные синтаксические анализаторы.
+смотреть на <a href="https://gitlab.com/Kakadu/haskell-course-demos/tree/master/Parsec">примеры</a>.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week5">Неделя 5 (02 октября)</h2>
 <div class="sectionbody">
 
 </div>
@@ -322,7 +318,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-19 12:32:05 MSK
+Last updated 2019-09-25 21:18:25 MSK
 </div>
 </div>
 </body>
