--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -47,6 +47,7 @@
 <li><a href="#_assembler">Assembler</a></li>
 <li><a href="#_datalog">Datalog</a></li>
 <li><a href="#_nfa">NFA</a></li>
+<li><a href="#_extended_regexps">Extended Regexps</a></li>
 <li><a href="#refal">РеФаЛ</a></li>
 <li><a href="#_forth">Forth</a></li>
 <li><a href="#_promela">Promela</a></li>
@@ -458,6 +459,10 @@ echo $BASH_COMMAND</pre>
 </div>
 </div>
 <div class="sect2">
+<h3 id="_extended_regexps">Extended Regexps</h3>
+
+</div>
+<div class="sect2">
 <h3 id="refal">РеФаЛ</h3>
 <div class="paragraph">
 <p>Отечественный язык программирования. Вдохновения черпать
@@ -548,7 +553,7 @@ MOV  EAX ← [y]       |         MOV  EBX ← [x]</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-10-01 12:56:58 MSK
+Last updated 2019-10-01 13:13:32 MSK
 </div>
 </div>
 </body>
