FP2019: add link to new lecture

--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -236,7 +236,15 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 </div>
 <div class="sect1">
-<h2 id="week5">Неделя 5 (02 октября)</h2>
+<h2 id="week5">Неделя 5 (03 октября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="02.pdf">Слайды про алгебру типов</a></p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week6">Неделя 5 (10 октября)</h2>
 <div class="sectionbody">
 
 </div>
@@ -318,7 +326,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-25 21:18:25 MSK
+Last updated 2019-10-03 12:26:26 MSK
 </div>
 </div>
 </body>
